# axconfig-gen

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  release.yml
axconfig-gen/: Cargo.toml  README.md
axconfig-gen-macros/: Cargo.toml  README.md
axconfig-gen-macros/src/: lib.rs
axconfig-gen-macros/tests/: example_config.rs
axconfig-gen/src/: config.rs  main.rs  output.rs  tests.rs  ty.rs  value.rs
axconfig-macros/: Cargo.toml
axconfig_gen/: all.html  enum.ConfigErr.html  enum.ConfigType.html  enum.OutputFormat.html  index.html  sidebar-items.js  struct.Config.html  struct.ConfigItem.html  struct.ConfigValue.html  type.ConfigResult.html
axconfig_gen/config/: struct.Config.html  struct.ConfigItem.html
axconfig_gen/output/: enum.OutputFormat.html
axconfig_gen_macros/: all.html  index.html  macro.include_configs.html  macro.parse_configs!.html  macro.parse_configs.html
axconfig_macros/: all.html  index.html  macro.include_configs!.html  macro.include_configs.html  macro.parse_configs.html  sidebar-items.js
example-configs/: defconfig.toml  output.rs  output.toml
example_configs/: defconfig.toml  output.rs  output.toml
search.index/: 03822bc4e5f0.js  0f6c819d7393.js  307ee3400469.js  30c349db56d6.js  3c670344ac2e.js  3ea5012f91d5.js  3f6a8bb2a2bf.js  5cc33620790d.js  5f7e924145ee.js  611f5ffb3fd9.js  63703d159cc4.js  67d1c5d4b5a9.js  7f9a5ca9070b.js  root.js
src/: config.rs  lib.rs  main.rs  output.rs  tests.rs  ty.rs  value.rs
(+38 files in other folders)
