[package]
name = "axconfig-gen"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
description = "A TOML-based configuration generator for ArceOS"
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axconfig-gen"
documentation = "https://docs.rs/axconfig-gen"
keywords = ["arceos", "config", "toml"]
categories = ["config", "parsing", "parser-implementations"]

[dependencies]
toml_edit = { version = "0.22" }
clap = { version = "4", features = ["derive"] }
