[workspace]
resolver = "2"

members = [
    "axconfig-gen",
    "axconfig-gen-macros",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]
license = "GPL-3.0-or-later OR Apache-2.0 OR MulanPSL-2.0"
homepage = "https://github.com/arceos-org/arceos"
repository = "https://github.com/arceos-org/axconfig-gen"
keywords = ["arceos", "config", "toml"]
